# esp32-demo

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  partition_table.csv  platformio.ini  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  PmodOLEDrgb.c  PmodOLEDrgb.h  appbme280.c  appbme280.h  appdefs.h  appdisplay.c  appdisplay.h  appfilesystem.c  appfilesystem.h  appmqtt.c  appmqtt.h  appota.c  appota.h  appsensors.c  appsensors.h  appstate.c  appstate.h  appuart.c  appuart.h  appultrasonic.c  appultrasonic.h  appwebserver.c  appwebserver.h  appwifi.c  appwifi.h  component.mk  esp32-demo-main.c  hcsr04.c
